[package]
name = "snapshot-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Snapshot Downloader Team"]
description = "A tool to download and extract Cosmos node snapshots"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
bytes = "1.10.1"
clap = { version = "4.5.50", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.5"
futures-util = "0.3.31"
indicatif = "0.18.1"
lz4 = "1.28.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["full", "signal"] }
tokio-util = { version = "0.7.16", features = ["io"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
zstd = "0.13.3"
