[package]
name = "snapshot-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Snapshot Downloader Team"]
description = "A tool to download and extract Cosmos node snapshots"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.8"
futures-util = "0.3.31"
indicatif = "0.18.3"
lz4 = "1.28.1"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["full", "signal"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
zstd = "0.13.3"
